--- a/index.html
+++ b/index.html
@@ -1,56 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
-
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
     <title>data-2-hash by ghaiklor</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-    <a id="forkme_banner" href="https://github.com/ghaiklor/data-2-hash">View on GitHub</a>
-    <div class="shell">
-
+    <div class="wrapper">
       <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>data-2-hash</h1>
-            <h2>CLI for crypto module</h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
+        <h1 class="header">data-2-hash</h1>
+        <p class="header">Tiny wrapper for crypto and CLI where you can call crypto functions from console</p>
+
+        <ul>
+          <li class="download"><a class="buttons" href="https://github.com/ghaiklor/data-2-hash/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/ghaiklor/data-2-hash/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/ghaiklor/data-2-hash">View On GitHub</a></li>
+        </ul>
+
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/ghaiklor">ghaiklor</a></p>
+
+
       </header>
-
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/ghaiklor/data-2-hash/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/ghaiklor/data-2-hash/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
-
-
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
+      <section>
         <h1>
-<a id="data-2-hash--" class="anchor" href="#data-2-hash--" aria-hidden="true"><span class="octicon octicon-link"></span></a>data-2-hash <a href="http://badge.fury.io/js/data-2-hash"><img src="https://badge.fury.io/js/data-2-hash.svg" alt="npm version"></a> <a href="https://travis-ci.org/ghaiklor/data-2-hash"><img src="https://travis-ci.org/ghaiklor/data-2-hash.svg" alt="Build Status"></a>
-</h1>
+<a id="data-2-hash" class="anchor" href="#data-2-hash" aria-hidden="true"><span class="octicon octicon-link"></span></a>data-2-hash</h1>
 
-<p>The main approach of this module is CLI interface for <code>crypto</code>. But you can include it and use as another module.</p>
+<p><img src="https://img.shields.io/travis/ghaiklor/data-2-hash.svg" alt="Build Status"> <img src="https://img.shields.io/coveralls/ghaiklor/data-2-hash.svg" alt="Coverage"> <img src="https://img.shields.io/npm/dm/data-2-hash.svg" alt="Downloads"> <img src="https://img.shields.io/npm/v/data-2-hash.svg" alt="npm version"> <img src="https://img.shields.io/david/ghaiklor/data-2-hash.svg" alt="dependencies"> <img src="https://img.shields.io/david/dev/ghaiklor/data-2-hash.svg" alt="dev dependencies"> <img src="https://img.shields.io/npm/l/data-2-hash.svg" alt="License"></p>
+
+<p>The main approach of this module is CLI interface for <code>crypto</code>.</p>
+
+<p>But it also provide a tiny wrapper for <code>crypto</code> so you can use crypto a little bit easier.</p>
 
 <h2>
 <a id="getting-started" class="anchor" href="#getting-started" aria-hidden="true"><span class="octicon octicon-link"></span></a>Getting Started</h2>
@@ -81,8 +68,25 @@ npm install -g data-2-hash <span class="pl-c"># Global (will be available CLI)</
 
 <p>If you install <code>data-2-hash</code> as global module, you can use CLI.</p>
 
-<div class="highlight highlight-shell"><pre>d2h --help <span class="pl-c"># Usage</span>
-d2h --list <span class="pl-c"># Print all supported hashes</span></pre></div>
+<div class="highlight highlight-shell"><pre>$ d2h --help <span class="pl-c"># Usage</span>
+
+Usage: d2h <span class="pl-k">&lt;</span><span class="pl-s3">hash</span>-function<span class="pl-k">&gt;</span> <span class="pl-k">&lt;</span>data<span class="pl-k">&gt;</span> [options]
+
+Options:
+
+  -h, --help     output usage information
+  -V, --version  output the version number
+  -l, --list     Print all available <span class="pl-s3">hash</span> functions
+  -f, --file     Execute hashing of file
+
+$ d2h --list <span class="pl-c"># Print all supported hashes</span>
+
+$ d2h md5 password <span class="pl-c"># Hash 'password' in md5</span>
+5f4dcc3b5aa765d61d8327deb882cf99
+
+$ d2h sha LICENSE --file
+Calculating...
+30ea61d5032533ce8605197b7a2c8d958afede54</pre></div>
 
 <h2>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h2>
@@ -109,21 +113,11 @@ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.</p>
       </section>
-
       <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/ghaiklor">ghaiklor</a> can be found on <a href="https://github.com/ghaiklor/data-2-hash">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
+        <p><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
-
     </div>
-
-    
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		
   </body>
 </html>
